[gd_scene load_steps=10 format=3 uid="uid://cnw713gv73sco"]

[ext_resource type="Script" uid="uid://ciw3eiln12rhc" path="res://Core/new/text_editor.gd" id="1_0xtr2"]
[ext_resource type="FontFile" uid="uid://i7nks7j06ka3" path="res://Assets/Fonts/0xProto_2_500/0xProto-Regular.otf" id="2_vym7j"]
[ext_resource type="FontFile" uid="uid://bs2vnnroo54au" path="res://Assets/Fonts/0xProto_2_500/0xProto-Bold.otf" id="3_kguml"]
[ext_resource type="FontFile" uid="uid://bes4xjxby8ilg" path="res://Assets/Fonts/0xProto_2_500/ZxProto/ZxProto-Italic.otf" id="4_r0eoa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtvq4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtvq4"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0xtr2"]
font = ExtResource("2_vym7j")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kguml"]
font = ExtResource("2_vym7j")
font_color = Color(1, 0.28235295, 0.18431373, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xtr2"]

[node name="TextEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xtr2")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.003921569, 0.019607844, 0.015686275, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HelpScreen" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_vym7j")
theme_override_fonts/bold_font = ExtResource("3_kguml")
theme_override_fonts/bold_italics_font = ExtResource("4_r0eoa")
theme_override_fonts/italics_font = ExtResource("4_r0eoa")
bbcode_enabled = true
text = "[b]FrogStudio    v.1.0.0 (beta)
(c) FroglightInteractive 2025
Distributed under the terms of the MIT license. See: https://opensource.org/license/mit[/b]


[b]-- Commands --[/b]

[b][color=green]help, h[/color][/b]  --  Display this help text

[b][color=green]q, quit[/color][/b]  --  Exit program

[b][color=green]esc[/color][/b]  --  Exit this help text

[b][color=green]o, open[/color][color=yellow] [i]<filename>[/i][/color][/b]  --  Open the named file

[b][color=green]w, write[/color][color=yellow] [i][<filename>][/i][/color][/b]  --  Save the document into a new file or into the existing file

[b][color=green]alias[/color][color=yellow] [i]<name> <command>[/i][/color][/b]  --  Make an alias with the given name to the given command"
threaded = true

[node name="TextEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_vym7j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qtvq4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qtvq4")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_qtvq4")
caret_type = 1
caret_blink = true
caret_draw_when_editable_disabled = true
highlight_all_occurrences = true
gutters_draw_line_numbers = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
auto_brace_completion_pairs = {
"\"": "\"",
"'": "'",
"(": ")",
"<": ">",
"[": "]",
"{": "}"
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ModeIndicator" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qtvq4")
theme_override_styles/focus = SubResource("StyleBoxFlat_qtvq4")
text = "NORMAL"
label_settings = SubResource("LabelSettings_0xtr2")
horizontal_alignment = 1

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qtvq4")
theme_override_styles/focus = SubResource("StyleBoxFlat_qtvq4")
label_settings = SubResource("LabelSettings_kguml")
horizontal_alignment = 1

[node name="CurrentFileLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_qtvq4")
theme_override_styles/focus = SubResource("StyleBoxFlat_qtvq4")
label_settings = SubResource("LabelSettings_0xtr2")
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="CaretPos" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qtvq4")
theme_override_styles/focus = SubResource("StyleBoxFlat_qtvq4")
text = "Ln 1: Col 1"
label_settings = SubResource("LabelSettings_0xtr2")
horizontal_alignment = 1

[node name="CommandBar" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vym7j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0xtr2")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_0xtr2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0xtr2")

[connection signal="caret_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_caret_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/CommandBar" to="." method="_on_command_bar_gui_input"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/CommandBar" to="." method="_on_command_bar_text_submitted"]
